MidiAngelo website with proper documentation

--- a/MidiAngelo Website/Login page/Login.html
+++ b/MidiAngelo Website/Login page/Login.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="./src/main.css">
     </head>
     <body>
+        <!-- Entire white block -->
         <div class="container">
+            <!-- Login form -->
             <form class="form" id="login">
                 <h1 class="form__title">Login</h1>
                 <div class="form__message form__message--error"></div>
@@ -28,6 +30,7 @@
                     <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
                 </p>
             </form>
+            <!-- The "create account" block -->
             <form class="form form--hidden" id="createAccount">
                 <h1 class="form__title">Create Account</h1>
                 <div class="form__message form__message--error"></div>
