Changed the tab headings in Contact and About HTML file

--- a/MidiConvert/cbo/static/about.html
+++ b/MidiConvert/cbo/static/about.html
@@ -5,7 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- CSS -->
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="css/yellow.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="css/center.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="css/blue.css" type="text/css" media="screen" />
 <!--[if IE 6]>
 <link rel="stylesheet" type="text/css" media="screen" href="css/ie-hacks.css" />
 <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
@@ -60,33 +61,18 @@
   <!-- wrapper -->
   <div class="wrapper-header">
     <!-- navigation -->
-    <ul id="nav" class="sf-menu">
+    <!-- <ul id="nav" class="sf-menu">
       <li><a href="index.html">HOME</a></li>
-      <li class="current_page_item"><a href="about.html">FEATURES</a>
-        <ul>
-          <li><a href="about.html">LAYOUT</a></li>
-          <li><a href="about-styled.html">STYLED</a></li>
-          <li><a href="about-more.html">MORE</a></li>
-        </ul>
-      </li>
-      <li><a href="gallery.html">GALLERY</a>
-        <ul>
-          <li><a href="gallery-2.html">TWO COLUMNS</a></li>
-          <li><a href="gallery.html">THREE COLUMNS</a></li>
-          <li><a href="gallery-4.html">FOUR COLUMNS</a></li>
-        </ul>
-      </li>
+      <li class="current_page_item"><a href="about.html">FEATURES</a></li>
       <li><a href="Login page/Login.html">LOGIN</a></li>
       <li><a href="contact.html">CONTACT</a></li>
-      <li><a href="#">COLOR SKINS</a>
-        <ul>
-          <li><a href="index.html">YELLOW</a></li>
-          <li><a href="blue.html">BLUE</a></li>
-          <li><a href="red.html">RED</a></li>
-          <li><a href="pink.html">PINK</a></li>
-          <li><a href="green.html">GREEN</a></li>
-        </ul>
-      </li>
+    </ul> -->
+    <ul id="nav" class="sf-menu">
+        <li><a href="/home">HOME</a></li>
+        <li><a href="/canvas">CANVAS</a></li>
+        <li class="current_page_item"><a href="/about">FEATURES</a></li>
+        <li ><a href="/login">LOGIN</a></li>
+        <li><a href="/contact">CONTACT</a></li>
     </ul>
     <!-- ENDS navigation -->
   </div>
@@ -97,8 +83,8 @@
 <div id="main">
   <!-- page title -->
   <div class="page-title-holder">
-    <div class="page-title">MULTIPLE COLUMNS LAYOUT</div>
-    <div class="page-subtitle">HAVE ANY COMBINATION OF TEXT COLUMNS</div>
+    <div class="page-title">Features of this website</div>
+    <div class="page-subtitle">Note: This is just the features implemented so far. We will have more in the future. Stay tuned!</div>
   </div>
   <!-- ENDS page title -->
   <!-- main-wrapper -->
@@ -106,75 +92,57 @@
     <!-- page-content -->
     <div class="page-content">
       <!-- one col -->
-      <h4>SPECIAL CHARACTERS SUCH</h4>
-      <h5>&aacute; &eacute; &iacute; &oacute; &uacute; &#324; &#323; &Aacute; &Eacute; &Iacute; &Oacute; &Uacute; &eacute; &egrave; &agrave; &ccedil; &ugrave; &ocirc; &ucirc; &icirc; &ecirc; &acirc; &Ouml; &Ucirc; &yuml; &Uuml; &Otilde;</h5>
-      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, are sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
       <div class="clear "></div>
       <!-- ENDS one col -->
       <!-- 2 cols -->
       <div class="one-half">
-        <h4>TWO COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugamet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vit, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Making music from drawing </h4>
+        <p>You can draw what you want on the canvas and can listen to your art. Our website does some sorcery to convert your drawing to music!</p>
       </div>
       <div class="one-half last">
-        <h4>TWO COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugamet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vit, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Choosing instruments that play over the .midi file </h4>
+        <p>We have a library of instruments for you to select from and this includes but not limited to string, woodwind, brass, drums, rtc.</p>
       </div>
       <div class="clear "></div>
       <!-- ENDS 2 cols -->
       <!-- 3 cols -->
       <div class="one-third">
-        <h4>THREE COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>A big drawing canvas is your playground</h4>
+        <p>Draw whatever you can imagine on the canvas provided. Feel the canvas is too small? No problem! Increase the canvas size as you see fit.</p>
       </div>
       <div class="one-third">
-        <h4>THREE COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Track and check your work over time</h4>
+        <p>Login and see what you have created so far and how you have improved over time </p>
       </div>
       <div class="one-third last">
-        <h4>THREE COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Convert .midi files to .mp3 </h4>
+        <p>You don't feel like drawing but you have a .midi file that you want to convert to mp3? Come right in! Our website can do that in no time.</p>
       </div>
       <div class="clear "></div>
       <!-- ENDS 3 cols -->
       <!-- 2/3 cols -->
       <div class="one-third">
-        <h4>ONE THIRD COLUMN</h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Choose your bpm</h4>
+        <p>You have made your song but feel the track is either slow or fast? Don't worry. With our bpm selector, you can input the bpm you want and change the speed of the music.</p>
       </div>
       <div class="two-third last">
-        <h4>TWO THIRD COLUMNS </h4>
-        <p>Pellentesque vit habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat Aenean fermentum, it sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. vit Aenean fermentum, Aenean fermentum, Aenean fermentum, Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Organize contests</h4>
+        <p>(Feature not implemented)You can host competitions to see who comes up with the best art and music by setting up a leaderboard and letting people vote on the submissions you get on your contest.</p>
       </div>
       <div class="clear "></div>
       <!-- ENDS 2/3 cols -->
       <!-- 4 cols -->
       <div class="one-fourth">
-        <h4>FOUR COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor qenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis.</p>
+        <h4>Know where you stand in your community </h4>
+        <p>(Feature not implemented)You can click on a user profile to see their gallery and their submissions in the contests they have participated in. </p>
       </div>
       <div class="one-fourth">
-        <h4>FOUR COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor qenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis.</p>
+        <h4>Comment your thoughts on others work</h4>
+        <p>(Feature not implemented)Want to be a critic? There is a comment box under a painting-mp3 combo, where you can leave your thoughts for the artist to see!</p>
       </div>
       <div class="one-fourth">
-        <h4>FOUR COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor qenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis.</p>
-      </div>
-      <div class="one-fourth last">
-        <h4>FOUR COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor qenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis.</p>
-      </div>
-      <div class="clear "></div>
-      <!-- ENDS 4 cols -->
-      <!-- 1/4-3/4 cols -->
-      <div class="one-fourth">
-        <h4>ONE FOURTH</h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, sit amet, ante. Donec eu libero sit amet quam egestas semper. </p>
-      </div>
-      <div class="three-fourth last">
-        <h4>THREE FOURTH COLUMNS </h4>
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+        <h4>Login to save your work periodically </h4>
+        <p>(Feature not implemented)You can create an account and login to save your work periodically so that you dont lose any of your precious time or imagination you brought to life in your art.</p>
       </div>
       <div class="clear"></div>
       <!-- ENDS 1/4-3/4 cols -->
@@ -187,7 +155,7 @@
     <div id="twitter-holder">
       <ul>
         <li>
-          <div class="twitter-entry">&quot;Vestibulum tortor quam, feugiat vitae, ultricies eget, <a href="#">domain.com</a>&quot; <span class="twitter-time">about 11 hours ago</span></div>
+          <div class="twitter-entry">&quot;Ayo this new website that I rolled up on got some dope features bruh. Yall gotta see this thing fr fr! Click on the line below to go there - <a href="#">midiangelo.com</a>&quot; <span class="twitter-time">about 11 hours ago</span></div>
         </li>
       </ul>
     </div>
