--- a/MidiConvert/cbo/static/contact.html
+++ b/MidiConvert/cbo/static/contact.html
@@ -5,7 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="css/yellow.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="css/center.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="css/blue.css" type="text/css" media="screen" />
   <!--[if IE 6]>
   <link rel="stylesheet" type="text/css" media="screen" href="css/ie-hacks.css" />
   <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
@@ -62,31 +63,9 @@
       <!-- navigation -->
       <ul id="nav" class="sf-menu">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">FEATURES</a>
-          <ul>
-            <li><a href="about.html">LAYOUT</a></li>
-            <li><a href="about-styled.html">STYLED</a></li>
-            <li><a href="about-more.html">MORE</a></li>
-          </ul>
-        </li>
-        <li><a href="gallery.html">GALLERY</a>
-          <ul>
-            <li><a href="gallery-2.html">TWO COLUMNS</a></li>
-            <li><a href="gallery.html">THREE COLUMNS</a></li>
-            <li><a href="gallery-4.html">FOUR COLUMNS</a></li>
-          </ul>
-        </li>
+        <li><a href="about.html">FEATURES</a></li>
         <li><a href="Login page/Login.html">LOGIN</a></li>
         <li class="current_page_item"><a href="contact.html">CONTACT</a></li>
-        <li><a href="#">COLOR SKINS</a>
-          <ul>
-            <li><a href="index.html">YELLOW</a></li>
-            <li><a href="blue.html">BLUE</a></li>
-            <li><a href="red.html">RED</a></li>
-            <li><a href="pink.html">PINK</a></li>
-            <li><a href="green.html">GREEN</a></li>
-          </ul>
-        </li>
       </ul>
       <!-- ENDS navigation -->
     </div>
@@ -98,7 +77,7 @@
     <!-- page title -->
     <div class="page-title-holder">
       <div class="page-title">CONTACT US</div>
-      <div class="page-subtitle">GET IN TOUCH WITH US, USE THE FORM BELOW OF CALL US BY PHONE.</div>
+      <div class="page-subtitle">GET IN TOUCH WITH US. USE THE FORM BELOW OR CALL US BY PHONE.</div>
     </div>
     <!-- ENDS page title -->
     <!-- main-wrapper -->
