--- a/MidiConvert/cbo/static/index.html
+++ b/MidiConvert/cbo/static/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>MIDIANGELO WEBSITE FRONT</title>
+  {% load static %} <!-- Prepare django to load static files -->
+  <link rel="icon" href={% static "minilogo_transparent.png" %}>
+  <title>.midiAngelo - Home</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="css/yellow.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "css/style.css" %} type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "css/blue.css" %} type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "css/center.css" %} type="text/css" media="screen" />
   <!--[if IE 6]>
   <link rel="stylesheet" type="text/css" media="screen" href="css/ie-hacks.css" />
   <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
@@ -15,38 +18,38 @@
   <!--[if IE 8]><link rel="stylesheet" type="text/css" media="screen" href="css/ie8-hacks.css" /><![endif]-->
   <!-- ENDS CSS -->
   <!-- prettyPhoto -->
-  <link rel="stylesheet" href="js/prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "js/prettyPhoto/css/prettyPhoto.css" %} type="text/css" media="screen" />
   <!-- ENDS prettyPhoto -->
   <!-- JS -->
-  <script type="text/javascript" src="js/jquery_1.4.2.js"></script>
-  <script type="text/javascript" src="js/jqueryui.js"></script>
-  <script type="text/javascript" src="js/easing.js"></script>
-  <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-  <script type="text/javascript" src="js/tooltip/jquery.tools.min.js"></script>
-  <script type="text/javascript" src="js/jquery.tabs/jquery.tabs.pack.js"></script>
-  <script type="text/javascript" src="js/filterable.pack.js"></script>
-  <script type="text/javascript" src="js/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
+  <script type="text/javascript" src={% static "js/jquery_1.4.2.js" %}></script>
+  <script type="text/javascript" src={% static "js/jqueryui.js" %}></script>
+  <script type="text/javascript" src={% static "js/easing.js" %}></script>
+  <script type="text/javascript" src={% static "js/jquery.cycle.all.js" %}></script>
+  <script type="text/javascript" src={% static "js/tooltip/jquery.tools.min.js" %}></script>
+  <script type="text/javascript" src={% static "js/jquery.tabs/jquery.tabs.pack.js" %}></script>
+  <script type="text/javascript" src={% static "js/filterable.pack.js" %}></script>
+  <script type="text/javascript" src={% static "js/prettyPhoto/js/jquery.prettyPhoto.js" %}></script>
+  <script type="text/javascript" src={% static "js/custom.js" %}></script>
   <!-- ENDS JS -->
   <!-- superfish -->
-  <link rel="stylesheet" type="text/css" media="screen" href="css/superfish-custom.css" />
-  <script type="text/javascript" src="js/superfish-1.4.8/js/hoverIntent.js"></script>
-  <script type="text/javascript" src="js/superfish-1.4.8/js/superfish.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href={% static "css/superfish-custom.css" %} />
+  <script type="text/javascript" src={% static "js/superfish-1.4.8/js/hoverIntent.js" %}></script>
+  <script type="text/javascript" src={% static "js/superfish-1.4.8/js/superfish.js" %}></script>
   <!-- ENDS superfish -->
   <!-- tabs -->
-  <link rel="stylesheet" href="css/jquery.tabs.css" type="text/css" media="print, projection, screen" />
+  <link rel="stylesheet" href={% static "css/jquery.tabs.css" %} type="text/css" media="print, projection, screen" />
   <!-- Additional IE/Win specific style sheet (Conditional Comments) -->
   <!--[if lte IE 7]><link rel="stylesheet" href="css/jquery.tabs-ie.css" type="text/css" media="projection, screen"><![endif]-->
   <!-- ENDS tabs -->
   <!-- Cufon -->
-  <script src="js/cufon-yui.js" type="text/javascript"></script>
-  <script src="js/bebas-neue_400.font.js" type="text/javascript"></script>
+  <script src={% static "js/cufon-yui.js" %} type="text/javascript"></script>
+  <script src={% static "js/bebas-neue_400.font.js" %} type="text/javascript"></script>
   <!-- /Cufon -->
   </head>
   <body>
   <div class="torn-top"></div>
   <!-- HEADER -->
-  <div id="header"> <a href="index.html"></a>
+  <div id="header"> <a href="/home"></a>
     <!-- search -->
     <div class="top-search">
       <form  method="get" id="searchform" action="#">
@@ -56,37 +59,15 @@
         </div>
       </form>
     </div>
-    ENDS search
     <!-- wrapper -->
     <div class="wrapper-header">
       <!-- navigation -->
       <ul id="nav" class="sf-menu">
-        <li class="current_page_item"><a href="index.html">HOME</a></li>
-        <li><a href="about.html">FEATURES</a>
-          <ul>
-            <li><a href="about.html">LAYOUT</a></li>
-            <li><a href="about-styled.html">STYLED</a></li>
-            <li><a href="about-more.html">MORE</a></li>
-          </ul>
-        </li>
-        <li><a href="gallery.html">GALLERY</a>
-          <ul>
-            <li><a href="gallery-2.html">TWO COLUMNS</a></li>
-            <li><a href="gallery.html">THREE COLUMNS</a></li>
-            <li><a href="gallery-4.html">FOUR COLUMNS</a></li>
-          </ul>
-        </li>
-        <li ><a href="Login page/Login.html">LOGIN</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-        <li><a href="#">COLOR SKINS</a>
-          <ul>
-            <li><a href="index.html">YELLOW</a></li>
-            <li><a href="blue.html">BLUE</a></li>
-            <li><a href="red.html">RED</a></li>
-            <li><a href="pink.html">PINK</a></li>
-            <li><a href="green.html">GREEN</a></li>
-          </ul>
-        </li>
+        <li class="current_page_item"><a href="/home">HOME</a></li>
+        <li><a href="/canvas">CANVAS</a></li>
+        <li><a href="/about">FEATURES</a></li>
+        <li ><a href="/login">LOGIN</a></li>
+        <li><a href="/contact">CONTACT</a></li>
       </ul>
       <!-- ENDS navigation -->
     </div>
@@ -97,21 +78,22 @@
   <div id="main">
     <!-- main-wrapper -->
     <div class="wrapper">
-      <div class="page-title">MIDIANGELO IS A WEBSITE USED TO CONVERT PIXEL ART TO MUSIC!</div>
+      <img style="height:200px; width:auto;" src={% static "minilogo_transparent.png" %} href="#">
+      <div class="page-title">.midiANGELO IS A WEBSITE USED TO CONVERT PIXEL ART TO MUSIC!</div>
       <div class="page-subtitle">Draw your art and convert it to music</div>
     </div>
     <div class="wrapper-slideshow">
       <!-- slideshow -->
       <div id="slideshow"> <a href="#" id="slideshow-link" ><span></span></a>
         <ul id="slides">
-          <li><a href="#"><img src="slides/01.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/02.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/03.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/01.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/02.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/03.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/01.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="slides/02.jpg" alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/01.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/02.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/03.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/01.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/02.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/03.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/01.jpg" %} alt="" /></a></li>
+          <li><a href="#"><img src={% static "slides/02.jpg" %} alt="" /></a></li>
         </ul>
       </div>
       <!-- ENDS slideshow -->
@@ -124,7 +106,7 @@
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">Want to take your NFT to another level?</p>
-            <a href="about.html" ><img src="img/dummies/NFT cover.jpeg" alt="" class="thumb" /> </a> </div>
+            <a href="about.html" ><img src={% static "img/dummies/NFT cover.jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text"> Login and upload (or create) your NFT and sell it with its own tune!
             <p><a href="Login page/Login.html" class="link-button"><span>LOGIN</span></a></p>
           </div>
@@ -132,7 +114,7 @@
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">CREATE YOUR ART AND MUSIC.</p>
-            <a href="about.html" ><img src="img/dummies/download (2).jpeg" alt="" class="thumb" /> </a> </div>
+            <a href="about.html" ><img src={% static "img/dummies/download (2).jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text">You can draw whatever you feel like and hear your art come to life!
             <p><a href="about.html" class="link-button"><span>FEATURES</span></a></p>
           </div>
@@ -140,7 +122,7 @@
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">ADD DIFFERENT INSTRUMENTS TO YOUR MP3 FILE</p>
-            <a href="about.html" ><img src="img/dummies/download (1).jpeg" alt="" class="thumb" /> </a> </div>
+            <a href="about.html" ><img src={% static "img/dummies/download (1).jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text">Choose from the different instruments included to create the music you want!
             <p><a href="about.html" class="link-button"><span>FEATURES</span></a></p>
           </div>
@@ -148,7 +130,7 @@
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">.midi TO MP3</p>
-            <a href="about.html" ><img src="img/dummies/download.jpeg" alt="" class="thumb" /> </a> </div>
+            <a href="about.html" ><img src={% static "img/dummies/download.jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text">Upload your .midi file and you can convert it to mp3. Easy and fast!
             <p><a href="about.html" class="link-button"><span>FEATURES</span></a></p>
           </div>
